--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 
 
 .offcanvas-body {
-    width: 50%;
+    width: 60%;
     margin-left: auto;
 }
 
@@ -21,9 +21,62 @@ body {
 .nav_container {
 
     background-color: rgba(151, 145, 145, 0.322);
-    /* set the background color to white with 50% opacity */
     backdrop-filter: blur(15px);
-    /* apply a blur effect to the background */
+}
 
+.nav_item:hover {
+    margin-bottom: -5px;
+    border-bottom: 5px white solid;
+}
+
+.line {
+    height: 2px;
+    width: 37%;
+    background-color: antiquewhite;
+    position: absolute;
+    right: 52%;
+    top: 50%;
+}
+
+.main_content {
+    margin-top: 52vh;
+}
+
+.main_content_text_section {
+    padding: 0px 13.7vw;
+    color: azure;
+}
+
+.main_content_title {
+    font-size: 7.5rem;
+    font-weight: lighter;
+}
+
+.main_content_text {
+    font-size: 1.2rem;
+
+}
+
+.explore {
+    height: 16vw;
+    width: 16vw;
+    border-radius: 50%;
+    /* background-color: rgb(255, 255, 255); */
+    background: white;
+    transition: 1.2s ease-out;
+}
+
+.explore:hover {
+    transform: scale(2);
+    background: radial-gradient(circle, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 35%, rgba(255, 255, 255, 0.11) 100%);
+}
+
+
+.explore_link {
+
+    font-size: 2.7rem;
+    font-weight: lighter;
+    text-decoration: none;
+    color: black;
 
 }
